--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
@@ -575,35 +575,41 @@ else
                     e.preventDefault();
                     window.loading('show');
                     var id = $(this).attr('data-id')
-                    var consultSchedule = consultSchedules.find((item) => item.ScheduleID == id);
-
-                    var token = $('input[name="__RequestVerificationToken"]').val();
-                    consultSchedule.__RequestVerificationToken = token;
-                    consultSchedule.pageUrl = window.location.pathname + window.location.search;
-
-                    $.ajax({
-                        url: '@ClientRoute.GenerateUrl(this, "Consult", "CancelConsultSchedule")',
-                        type: 'POST',
-                        data: consultSchedule
-                    }).done(function (data, textStatus, jqXHR) {
-                        $.magnificPopup.close();
-                        if (data.success) {
-                            if (data1.length > 0) {
-                                fjs1.removeRecords({ ScheduleID: id });
-                            }
-                        }
-                        else {
-                            if (data.block) {
-                                window.VerifyLoginRedirctToHome(data.success);
-                                return;
-                            }
-                        }
-                    }).fail(function (jqXHR, textStatus, errorThrown) {
-                    }).always(function () {
-                        window.loading('hide');
-                    });
+                    cancelConsultSchedule(id);
                 });
             }
+
+            function cancelConsultSchedule(id) {
+                var consultSchedule = consultSchedules.find((item) => item.ScheduleID == id);
+
+                var token = $('input[name="__RequestVerificationToken"]').val();
+                consultSchedule.__RequestVerificationToken = token;
+                consultSchedule.pageUrl = window.location.pathname + window.location.search;
+
+                $.ajax({
+                    url: '@ClientRoute.GenerateUrl(this, "Consult", "CancelConsultSchedule")',
+                    type: 'POST',
+                    data: consultSchedule
+                }).done(function (data, textStatus, jqXHR) {
+                    $.magnificPopup.close();
+                    if (data.success) {
+                        if (data1.length > 0) {
+                            fjs1.removeRecords({ ScheduleID: id });
+                        }
+                    }
+                    else {
+                        if (data.block) {
+                            window.VerifyLoginRedirctToHome(data.success);
+                            return;
+                        }
+                    }
+                }).fail(function (jqXHR, textStatus, errorThrown) {
+                }).always(function () {
+                    window.loading('hide');
+                });
+            }
+
+            bindClickEvent();
 
             moment.locale('zh-tw', {
                 weekdaysMin: dayNamesZh,
@@ -870,7 +876,7 @@ else
                 var footerBtnSuccess = `
                         <div class="l-action l-action--inline" data-footer-tmpl="success">
                             <div class="l-action__item">
-                                <a href="#" class="o-btn o-btn--secondary o-btn--sm" data-event-id="{id}" data-id="{id}" data-quick-close data-cancel>取消預約</a>
+                                <a href="#" class="o-btn o-btn--secondary o-btn--sm" data-event-id="{id}" data-quick-close data-cancel>取消預約</a>
                             </div>
                             <div class="l-action__item">
                                 <a href="#" class="o-btn o-btn--primary o-btn--sm {isDisabled}" data-event-id="{id}" data-start-btn>{starBtnText}</a>
@@ -879,7 +885,7 @@ else
                 var footerBtnReserving = `
                         <div class="l-action l-action--inline" data-footer-tmpl="reserving">
                             <div class="l-action__item">
-                                <a href="#" class="o-btn o-btn--secondary o-btn--sm" data-event-id="{id}" data-id="{id}" data-quick-close data-cancel>取消預約</a>
+                                <a href="#" class="o-btn o-btn--secondary o-btn--sm" data-event-id="{id}" data-quick-close data-cancel>取消預約</a>
                             </div>
                         </div>`;
                 var $footerWrapper = `
@@ -919,10 +925,16 @@ else
                 e.preventDefault();
                 // 開始諮詢的該筆資料
                 let id = $(this).data('eventId');
-                let data = dataSource.find(item => item.id === id);
-            });            
+                window.open('@(Model.ConsultScheduleLink)?id=' + id + '&type=Employee');
+            });
 
-            bindClickEvent();
+            // 取消諮詢
+            $('body').on('click.cancel', '[data-cancel]', function () {
+                e.preventDefault();
+                // 開始諮詢的該筆資料
+                let id = $(this).data('eventId');
+                cancelConsultSchedule(id);
+            });
         });
     </script>
 }
