Update:做完風險屬性後須再次打API去取得資訊、未有風險屬性彈窗流程調整、資產配置調整、注意文字內容設定

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -237,6 +237,7 @@
                 $.ajax({
                     url: '@ClientRoute.GenerateUrl(this, "Accounts", "GetCifMemberRisk")',
                     type: 'POST',
+                    async: false,
                     data: { pageUrl: window.location.pathname + window.location.search },
                     success: function (data) {
                         resolve(data);
