--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/BuyHouse.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/BuyHouse.cshtml
@@ -519,7 +519,7 @@
                                         <div class="c-chartBox c-chartBox--sm@dt-only">
                                             <div class="l-riskCard">
                                                 <div class="l-riskCard__charts">
-                                                    <img src="~/themes/images/charts/rr4.svg" alt="">
+                                                    <img src="" alt="">
                                                 </div>
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
@@ -546,13 +546,10 @@
                         </div>
                     </div>
 
-                    @if (!string.IsNullOrEmpty(Model.Notice))
-                    {
-                        <div class="c-section">
-                            <div class="c-warning warningNotice">@Model.Notice</div>
-                        </div>
-                    }
-
+                   <div class="c-section">
+                       <div class="c-warning warningNotice"></div>
+                   </div>
+                    
                 </div>
 
                 <!-- 推薦基金 -->
@@ -707,7 +704,7 @@
                                         <div class="c-chartBox c-chartBox--sm@dt-only">
                                             <div class="l-riskCard">
                                                 <div class="l-riskCard__charts">
-                                                    <img src="~/themes/images/charts/rr4.svg" alt="">
+                                                    <img src="" alt="">
                                                 </div>
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
@@ -734,12 +731,9 @@
                         </div>
                     </div>
 
-                    @if (!string.IsNullOrEmpty(Model.Notice))
-                    {
-                        <div class="c-section">
-                            <div class="c-warning warningNotice">@Model.Notice</div>
-                        </div>
-                    }
+                    <div class="c-section">
+                        <div class="c-warning warningNotice"></div>
+                    </div>
 
                 </div>
 
@@ -895,7 +889,7 @@
                                         <div class="c-chartBox c-chartBox--sm@dt-only">
                                             <div class="l-riskCard">
                                                 <div class="l-riskCard__charts">
-                                                    <img src="~/themes/images/charts/rr4.svg" alt="">
+                                                    <img src="" alt="">
                                                 </div>
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
@@ -922,12 +916,9 @@
                         </div>
                     </div>
 
-                    @if (!string.IsNullOrEmpty(Model.Notice))
-                    {
-                        <div class="c-section">
-                            <div class="c-warning warningNotice">@Model.Notice</div>
-                        </div>
-                    }
+                    <div class="c-section">
+                        <div class="c-warning warningNotice"></div>
+                    </div>
 
                 </div>
 
@@ -1083,7 +1074,7 @@
                                         <div class="c-chartBox c-chartBox--sm@dt-only">
                                             <div class="l-riskCard">
                                                 <div class="l-riskCard__charts">
-                                                    <img src="~/themes/images/charts/rr4.svg" alt="">
+                                                    <img src="" alt="">
                                                 </div>
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
@@ -1110,12 +1101,9 @@
                         </div>
                     </div>
 
-                    @if (!string.IsNullOrEmpty(Model.Notice))
-                    {
-                        <div class="c-section">
-                            <div class="c-warning warningNotice">@Model.Notice</div>
-                        </div>
-                    }
+                    <div class="c-section">
+                        <div class="c-warning warningNotice"></div>
+                    </div>
 
                 </div>
 
@@ -1273,7 +1261,7 @@
                                         <div class="c-chartBox c-chartBox--sm@dt-only">
                                             <div class="l-riskCard">
                                                 <div class="l-riskCard__charts">
-                                                    <img src="~/themes/images/charts/rr4.svg" alt="">
+                                                    <img src="" alt="">
                                                 </div>
                                                 <div class="l-riskCard__content">
                                                     <div class="l-riskCard__desc">已自動帶入您的風險屬性，如果想要變更請自行前往變更！如您已變更完成，請重新更新頁面</div>
@@ -1300,12 +1288,9 @@
                         </div>
                     </div>
 
-                    @if (!string.IsNullOrEmpty(Model.Notice))
-                    {
-                        <div class="c-section">
-                            <div class="c-warning warningNotice">@Model.Notice</div>
-                        </div>
-                    }
+                    <div class="c-section">
+                        <div class="c-warning warningNotice"></div>
+                    </div>
 
                 </div>
 
@@ -1527,6 +1512,7 @@
     (function ($, window, document, undefined) {
         document.addEventListener("DOMContentLoaded", function () {
             var resultHasGap;
+            var assetsData;
             var description, readingbar = [], earningsChart = [], chartsRevenues = [], chartsRewards = [], chartsRewardsCategories = [], chartsAssets = [];
             var hasRenderedRecommendations = false;
             var lockImg = "/themes/images/icons/others/lock.svg"
@@ -1541,43 +1527,108 @@
                 'BuyHousemonthlyInvestment',
                 'BuyHouseexpectedRoi'
             ];
-            var assetsData = {
+
+            var conservativeAssetsData = {
                 stock: {
-                    number: @Model.StockAllocation,
-                    fieldName: '@Model.StockAllocationFieldName',
-                    text: '@Model.StockAllocationText'
+                    number: @Model.ConservativeRiskStockAllocation,
+                    fieldName: '@Model.ConservativeRiskStockAllocationFieldName',
+                    text: '@Model.ConservativeRiskStockAllocationText'
                 },
                 bond: {
-                    number: @Model.BondAllocation,
-                    fieldName: '@Model.BondAllocationFieldName',
-                    text: '@Model.BondAllocationText'
+                    number: @Model.ConservativeRiskBondAllocation,
+                    fieldName: '@Model.ConservativeRiskBondAllocationFieldName',
+                    text: '@Model.ConservativeRiskBondAllocationText'
                 },
                 currency: {
-                    number: @Model.CurrencyAllocation,
-                    fieldName: '@Model.CurrencyAllocationFieldName',
-                    text: '@Model.CurrencyAllocationText'
+                    number: @Model.ConservativeRiskCurrencyAllocation,
+                    fieldName: '@Model.ConservativeRiskCurrencyAllocationFieldName',
+                    text: '@Model.ConservativeRiskCurrencyAllocationText'
                 }
             };
 
-            if (SC_DATA.IsLoggedIn) {
-
-                $('[data-save="true"]').removeClass('u-hidden');
-
-                if (SC_DATA.Risk == undefined) {
-                    RiskHandler().then((data) => {
-                        SC_DATA.Risk = data.risk;
-                    });
+            var robustAssetsData = {
+                stock: {
+                    number: @Model.RobustRiskStockAllocation,
+                    fieldName: '@Model.RobustRiskStockAllocationFieldName',
+                    text: '@Model.RobustRiskStockAllocationText'
+                },
+                bond: {
+                    number: @Model.RobustRiskBondAllocation,
+                    fieldName: '@Model.RobustRiskBondAllocationFieldName',
+                    text: '@Model.RobustRiskBondAllocationText'
+                },
+                currency: {
+                    number: @Model.RobustRiskCurrencyAllocation,
+                    fieldName: '@Model.RobustRiskCurrencyAllocationFieldName',
+                    text: '@Model.RobustRiskCurrencyAllocationText'
                 }
-                if (SC_DATA.Risk !== undefined && SC_DATA.PlatForm == 'WebBank') {
+            };
 
-                    UpdateRiskAttributesContent(SC_DATA.Risk);
-
-                } else if (SC_DATA.Risk == undefined && SC_DATA.PlatForm == 'WebBank') {
-                    renderNotRisk();
+            var positiveAssetsData = {
+                stock: {
+                    number: @Model.PositiveRiskStockAllocation,
+                    fieldName: '@Model.PositiveRiskStockAllocationFieldName',
+                    text: '@Model.PositiveRiskStockAllocationText'
+                },
+                bond: {
+                    number: @Model.PositiveRiskBondAllocation,
+                    fieldName: '@Model.PositiveRiskBondAllocationFieldName',
+                    text: '@Model.PositiveRiskBondAllocationText'
+                },
+                currency: {
+                    number: @Model.PositiveRiskCurrencyAllocation,
+                    fieldName: '@Model.PositiveRiskCurrencyAllocationFieldName',
+                    text: '@Model.PositiveRiskCurrencyAllocationText'
                 }
+            };
+
+            //#region 更新風險屬性相關內容&判斷對應遮罩事件
+            handleRisk();
+
+            if (SC_DATA.Risk == '1') {
+                assetsData = conservativeAssetsData;
+            } else if (SC_DATA.Risk == '2') {
+                assetsData = robustAssetsData;
+            } else if (SC_DATA.Risk == '3') {
+                assetsData = positiveAssetsData;
             } else {
-                renderNotLogin();
+                if (defaultRiskAttributes == '2') {
+                    assetsData = conservativeAssetsData;
+                    UpdateRiskAttributesContent('1');
+                } else if (defaultRiskAttributes == '5') {
+                    assetsData = robustAssetsData;
+                    UpdateRiskAttributesContent('2');
+                } else if (defaultRiskAttributes == '7') {
+                    assetsData = positiveAssetsData;
+                    UpdateRiskAttributesContent('3');
+                }
             }
+            //#endregion
+
+            //#region 更新風險屬性&判斷對應遮罩方法
+            async function handleRisk() {
+                if (SC_DATA.IsLoggedIn) {
+                    $('[data-save="true"]').removeClass('u-hidden');
+
+                    if (SC_DATA.Risk === undefined) {
+                        try {
+                            const data = await RiskHandler();
+                            SC_DATA.Risk = data.risk;
+                        } catch (error) {
+                            console.error('Error fetching risk data:', error);
+                        }
+                    }
+
+                    if (SC_DATA.Risk !== undefined && SC_DATA.PlatForm === 'WebBank') {
+                        UpdateRiskAttributesContent(SC_DATA.Risk);
+                    } else if (SC_DATA.Risk === undefined && SC_DATA.PlatForm === 'WebBank') {
+                        renderNotRisk();
+                    }
+                } else {
+                    renderNotLogin();
+                }
+            }
+            //#endregion
 
             //#region 預計幾年後達成目標綁定事件
             let $sliderYear = $('[data-slider-id="year"]').get(0),
@@ -1879,7 +1930,7 @@
                     renderChartsAssets(chartsAssets);
 
                     // 顯示試算結果 - 諮詢區塊
-                    if (SC_DATA.IsLoggedIn && SC_DATA.WebBankId !== "") {
+                    if (SC_DATA.IsLoggedIn && SC_DATA.PlatForm == 'WebBank') {
                         $("#consultsuccess").removeClass("u-hidden");
                     }
                     else {
@@ -1973,7 +2024,7 @@
                     renderChartsAssets(chartsAssets);
 
                     // 顯示試算結果 - 諮詢區塊
-                    if (SC_DATA.IsLoggedIn && SC_DATA.WebBankId !== "") {
+                    if (SC_DATA.IsLoggedIn && SC_DATA.PlatForm == 'WebBank') {
                         $("#consultsuccess").removeClass("u-hidden");
                     }
                     else {
@@ -2140,17 +2191,19 @@
             //#endregion
 
             //#region 解鎖專屬推薦綁定事件
-            $('#btnUnlock').on('click', function (e) {
+            $('#btnUnlock').on('click', async function (e) {
                 e.preventDefault();
 
-                RiskHandler().then((data) => {
-                    if (data && data.success) {
-                        unlockRecommendations(data);
-                    } else if (!data.success && data.block) {
+                try {
+                    const data = await RiskHandler();
+                    if (!data.success && data.block) {
                         window.VerifyLoginRedirctToHome(data.success);
-                        return;
+                    } else {
+                        unlockRecommendations(data);
                     }
-                });
+                } catch (error) {
+                    console.error('Error handling risk:', error);
+                }
             });
             //#endregion
 
@@ -2200,6 +2253,16 @@
                 var webKycLink = '@WebKycLink';
 
                 window.open(webKycLink, '_blank');
+
+                setTimeout(function () {
+                    $.magnificPopup.open({
+                        items: {
+                            src: '#popupRisk'
+                        },
+                        type: 'inline'
+                    });
+                    $.magnificPopup.instance.history.splice(0, $.magnificPopup.instance.history.length - 1);
+                }, 100);
             });
             //#endregion
 
@@ -3427,18 +3490,21 @@
                 switch (risk) {
                     case "1":
                         defaultRiskAttributes = 2;
-                        imgSrc = '/themes/images/charts/rr2.svg';
-                        warningText = '注意：由於您的風險屬性為 保守型，部分風險等級高的推薦標的無法做申購，請您留意！';
+                        imgSrc = '@Model.ConservativeRiskImage';
+                        warningText = '@Model.ConservativeRiskNotice';
+                        assetsData = conservativeAssetsData;
                         break;
                     case "2":
                         defaultRiskAttributes = 5;
-                        imgSrc = '/themes/images/charts/rr4.svg';
-                        warningText = '注意：由於您的風險屬性為 穩健型，部分風險等級高的推薦標的無法做申購，請您留意！';
+                        imgSrc = '@Model.RobustRiskImage'
+                        warningText = '@Model.RobustRiskNotice';
+                        assetsData = robustAssetsData;
                         break;
                     case "3":
                         defaultRiskAttributes = 7;
-                        imgSrc = '/themes/images/charts/rr5.svg';
-                        warningText = '注意：由於您的風險屬性為 積極型，部分風險等級高的推薦標的無法做申購，請您留意！';
+                        imgSrc = '@Model.PositiveRiskImage'
+                        warningText = '@Model.PositiveRiskNotice';
+                        assetsData = positiveAssetsData;
                         break;
                     default:
                         console.error('Unknown risk attribute:', risk);
@@ -3446,7 +3512,7 @@
                 }
 
                 $('.l-riskCard__charts img').attr('src', imgSrc);
-                $('.warningNotice').text(warningText);
+                $('.warningNotice').text(warningText.replace(/&#160;/g, ' '));
             }
             //#endregion
 
