修改理顧幫忙預約成功的提示訊息

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
@@ -376,7 +376,7 @@
                     <img src="~/themes/images/icons/status/success.svg" alt="">
                 </div>
                 <div class="l-flex__item">
-                    感謝您的預約，本行理財專員將盡速回覆您，並確認預約時間。如您有留存電子信箱，系統將自動寄發本次預約訊息。
+                    您已協助客戶預約，系統將自動寄發預約訊息給客戶，請盡速通知客戶至電子信箱確認。
                 </div>
             </div>
         </div>
