Add : 新增首頁頭條新聞元件

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -30,7 +30,8 @@
             "/themes/vendor/magnific-popup/magnific-popup.css",
             "/themes/css/normalize.min.css",
             "/themes/css/layout.min.css",
-            "/themes/css/main.min.css")
+            "/themes/css/main.min.css",
+            "/themes/css/component-style.css")
     @* <!-- Global css / End --> *@
     <!-- override-->
     <!-- library -->
