--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
@@ -553,7 +553,7 @@
             <div class="c-cardTable__title" data-length="5">參考申購價格</div>
             <div class="c-cardTable__content">
                 <% if (typeof RedemptionFee == "number" && !isNaN(RedemptionFee)) { %>
-                    <span><%= RedemptionFee.toFixed(2) %>%</span>
+                    <span><%= RedemptionFee.toFixed(2) %></span>
                 <% } else { %>
                     <span>-</span>
                 <% } %>
