Update : 結構型商品詳細頁 近30日參考贖回價 漲跌樣式及數值呈現方式調整

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductDetail.cshtml
@@ -844,7 +844,18 @@
 
                                                                     if (decimal.TryParse(item.BankSellPriceChange, out bankSellPriceChange))
                                                                     {
-                                                                        diffClass = bankSellPriceChange > 0 ? "o-rise" : "o-fall";
+                                                                        if (bankSellPriceChange > 0)
+                                                                        {
+                                                                            diffClass = "o-rise";
+                                                                        }
+                                                                        else if (bankSellPriceChange < 0)
+                                                                        {
+                                                                            diffClass = "o-fall";
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            diffClass = "";
+                                                                        }
                                                                     }
                                                                     else
                                                                     {
@@ -860,7 +871,7 @@
                                                                         </td>
                                                                         <td>
                                                                             <span class="@diffClass">
-                                                                                @item.BankSellPriceChange
+                                                                                @Math.Abs(bankSellPriceChange).ToString()
                                                                             </span>
                                                                         </td>
                                                                     </tr>
