Update：全產品搜尋頁－結構型商品欄位排序
- 調整"發行機構"欄位排序

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/_ProductSearchResult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/_ProductSearchResult.cshtml
@@ -560,8 +560,8 @@
                                     <option value="">排序</option>
                                     <option value="股票名稱高至低" data-sorting-column="ProductCode" data-sorting-class="is-desc">股票名稱高至低</option>
                                     <option value="股票名稱低至高" data-sorting-column="ProductCode" data-sorting-class="is-asc">股票名稱低至高</option>
-                                    <option value="發行機構高至低" data-sorting-column="IssuingInstitutionPair.Key" data-sorting-class="is-desc">發行機構高至低</option>
-                                    <option value="發行機構低至高" data-sorting-column="IssuingInstitutionPair.Key" data-sorting-class="is-asc">發行機構低至高</option>
+                                    <option value="發行機構高至低" data-sorting-column="IssuingInstitutionPair.Value" data-sorting-class="is-desc">發行機構高至低</option>
+                                    <option value="發行機構低至高" data-sorting-column="IssuingInstitutionPair.Value" data-sorting-class="is-asc">發行機構低至高</option>
                                     <option value="幣別高至低" data-sorting-column="CurrencyCode" data-sorting-class="is-desc">幣別高至低</option>
                                     <option value="幣別低至高" data-sorting-column="CurrencyCode" data-sorting-class="is-asc">幣別低至高</option>
                                     <option value="到期日近至遠" data-sorting-column="ProductMaturityDatePair.Key" data-sorting-class="is-desc">到期日近至遠</option>
@@ -597,7 +597,7 @@
                                     <th>
                                         <div class="c-table__title">
                                             <span>發行機構</span>
-                                            <a href="#" class="o-sorting" data-sorting-column="IssuingInstitutionPair.Key"></a>
+                                            <a href="#" class="o-sorting" data-sorting-column="IssuingInstitutionPair.Value"></a>
                                         </div>
                                     </th>
                                     <th>
